--- a/pom.xml
+++ b/pom.xml
@@ -102,11 +102,22 @@
             <artifactId>jquery</artifactId>
             <version>2.1.4</version>
         </dependency>
+
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+
+
+
 
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -145,6 +156,16 @@
             <artifactId>spring-security-web</artifactId>
             <version>4.1.1.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+
+
+
 
 
 
